feat: upgrade dashboard with real-time updates, timeline, diagrams, fCOSE
- WebSocket client with auto-reconnect and event dispatch
- Timeline tab with noUiSlider range filter and playback controls
- Mermaid diagrams: fiber structure, type distribution, synapse flow
- fCOSE layout for 2000+ node graph performance
- Layout switcher, dynamic node limit slider, progressive loading
- Graph pagination API with limit/offset/validation
- XSS sanitization, CDN version pinning, i18n (EN+VI)
- Dashboard API: timeline, fiber diagram, fiber list endpoints

--- a/src/neural_memory/server/static/locales/en.json
+++ b/src/neural_memory/server/static/locales/en.json
@@ -84,5 +84,42 @@
   "int_coming_soon": "Coming Soon",
   "int_import_coming_soon": "Import coming soon",
   "detected": "Detected",
-  "not_detected": "Not Detected"
+  "not_detected": "Not Detected",
+  "timeline": "Timeline",
+  "diagrams": "Diagrams",
+  "timeline_desc": "Chronological view of all memories with time range filter and playback.",
+  "diagrams_desc": "Visual diagrams of fiber structures, type distribution, and synapse flows.",
+  "time_range": "Time Range",
+  "playback": "Playback",
+  "speed": "Speed",
+  "play": "Play",
+  "pause": "Pause",
+  "step_forward": "Step Forward",
+  "step_backward": "Step Backward",
+  "showing_x_of_y": "Showing",
+  "of": "of",
+  "memories": "memories",
+  "filter_by_type": "Filter by Type",
+  "no_timeline_data": "No timeline data",
+  "timeline_empty_hint": "Store some memories first, then explore them on the timeline.",
+  "layout": "Layout",
+  "node_limit": "Node Limit",
+  "load_more": "Load More",
+  "clustering": "Clustering",
+  "nodes": "nodes",
+  "edges": "edges",
+  "ws_connected": "Connected",
+  "ws_connecting": "Connecting...",
+  "ws_disconnected": "Disconnected",
+  "ws_reconnecting": "Reconnecting...",
+  "fiber_structure": "Fiber Structure",
+  "type_distribution": "Type Distribution",
+  "synapse_flow": "Synapse Flow",
+  "select_fiber": "Select a fiber...",
+  "no_fibers": "No fibers available",
+  "diagram_select_hint": "Select a fiber to view its structure diagram.",
+  "real_time_updates": "Real-time updates enabled",
+  "brain_switched": "Brain switched",
+  "health_check_done": "Health check done",
+  "nodes_loaded": "More nodes loaded"
 }
