--- a/src/neural_memory/server/static/locales/vi.json
+++ b/src/neural_memory/server/static/locales/vi.json
@@ -84,5 +84,42 @@
   "int_coming_soon": "S\u1eafp ra m\u1eaft",
   "int_import_coming_soon": "T\u00ednh n\u0103ng nh\u1eadp s\u1eafp ra m\u1eaft",
   "detected": "\u0110\u00e3 ph\u00e1t hi\u1ec7n",
-  "not_detected": "Kh\u00f4ng ph\u00e1t hi\u1ec7n"
+  "not_detected": "Kh\u00f4ng ph\u00e1t hi\u1ec7n",
+  "timeline": "D\u00f2ng th\u1eddi gian",
+  "diagrams": "S\u01a1 \u0111\u1ed3",
+  "timeline_desc": "Xem theo th\u1eddi gian t\u1ea5t c\u1ea3 k\u00fd \u1ee9c v\u1edbi b\u1ed9 l\u1ecdc ph\u1ea1m vi v\u00e0 ph\u00e1t l\u1ea1i.",
+  "diagrams_desc": "S\u01a1 \u0111\u1ed3 tr\u1ef1c quan c\u1ee7a c\u1ea5u tr\u00fac s\u1ee3i, ph\u00e2n b\u1ed1 lo\u1ea1i v\u00e0 lu\u1ed3ng synapse.",
+  "time_range": "Ph\u1ea1m vi th\u1eddi gian",
+  "playback": "Ph\u00e1t l\u1ea1i",
+  "speed": "T\u1ed1c \u0111\u1ed9",
+  "play": "Ph\u00e1t",
+  "pause": "D\u1eebng",
+  "step_forward": "Ti\u1ebfn",
+  "step_backward": "L\u00f9i",
+  "showing_x_of_y": "Hi\u1ec3n th\u1ecb",
+  "of": "tr\u00ean",
+  "memories": "k\u00fd \u1ee9c",
+  "filter_by_type": "L\u1ecdc theo lo\u1ea1i",
+  "no_timeline_data": "Ch\u01b0a c\u00f3 d\u1eef li\u1ec7u",
+  "timeline_empty_hint": "L\u01b0u m\u1ed9t v\u00e0i k\u00fd \u1ee9c tr\u01b0\u1edbc r\u1ed3i kh\u00e1m ph\u00e1 tr\u00ean d\u00f2ng th\u1eddi gian.",
+  "layout": "B\u1ed1 c\u1ee5c",
+  "node_limit": "Gi\u1edbi h\u1ea1n n\u00fat",
+  "load_more": "T\u1ea3i th\u00eam",
+  "clustering": "Ph\u00e2n c\u1ee5m",
+  "nodes": "n\u00fat",
+  "edges": "c\u1ea1nh",
+  "ws_connected": "\u0110\u00e3 k\u1ebft n\u1ed1i",
+  "ws_connecting": "\u0110ang k\u1ebft n\u1ed1i...",
+  "ws_disconnected": "M\u1ea5t k\u1ebft n\u1ed1i",
+  "ws_reconnecting": "\u0110ang k\u1ebft n\u1ed1i l\u1ea1i...",
+  "fiber_structure": "C\u1ea5u tr\u00fac S\u1ee3i",
+  "type_distribution": "Ph\u00e2n b\u1ed1 Lo\u1ea1i",
+  "synapse_flow": "Lu\u1ed3ng Synapse",
+  "select_fiber": "Ch\u1ecdn s\u1ee3i...",
+  "no_fibers": "Kh\u00f4ng c\u00f3 s\u1ee3i",
+  "diagram_select_hint": "Ch\u1ecdn m\u1ed9t s\u1ee3i \u0111\u1ec3 xem s\u01a1 \u0111\u1ed3 c\u1ea5u tr\u00fac.",
+  "real_time_updates": "C\u1eadp nh\u1eadt th\u1eddi gian th\u1ef1c \u0111\u00e3 b\u1eadt",
+  "brain_switched": "\u0110\u00e3 chuy\u1ec3n n\u00e3o",
+  "health_check_done": "Ki\u1ec3m tra s\u1ee9c kh\u1ecfe xong",
+  "nodes_loaded": "\u0110\u00e3 t\u1ea3i th\u00eam n\u00fat"
 }
